<resources>
    <string name="app_name">Mech Care</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_login">Login</string>

    <string name="hint_enter_password">Enter Password</string>
    <string name="hint_enter_email">Enter Email</string>


    <string name="error_empty_fields">Please fill this field</string>
    <string name="text_get_rooms">Get Rooms</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_landing">LandingActivity</string>

    <string name="text_enter_email_fp">Enter Email</string>
    <string name="hint_enter_cpass">Confirm Password</string>
    <string name="hint_enter_pass">Enter Password</string>
    <string name="hint_room_id">Enter Room ID</string>
    <string name="hint_room_name">Room Name</string>
    <string name="hint_room_description">Room Description</string>
    <string name="text_add_rooms">Add Room</string>
    <string name="hint_sensor_name">Sensor_Name</string>
    <string name="hint_sensor_status">Sensor_Status</string>
    <string name="hint_sensor_description">Sensor Description</string>
    <string name="hint_max_temp">Max Temp</string>
    <string name="text_update_room">Update Room</string>
    <string name="notifications">Notifications</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="text_add_sensors">Add Sensors</string>
    <string name="text_view_history">View History</string>
    <string name="text_update_sensor">Update Sensor</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="cancel">Cancel</string>
    <string name="address">ICCBS Technology Park and Technology Incubation Center, Industrial Linkages Building,
         International Center for Chemical and Biological Sciences, University Of Karachi, Karachi
    </string>
    <string name="link"><a href="http://electrosofttechnologies.com">Visit our Website</a></string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="add_room">Add Room</string>
    <string name="enter_room_name">Enter Room Name</string>
    <string name="are_you_sure_you_want_to_delete_the_room">Are you sure you want to delete the room?</string>
    <string name="delete">Delete</string>
    <string name="address_hint">Address</string>
    <string name="configuration">Configuration</string>
    <string name="view_your_configurations">View Your Configurations</string>
    <string name="view_rooms">View Rooms</string>
    <string name="view_all_rooms">View All Rooms</string>
    <string name="powered_by_electrosoft">Powered By Electrosoft</string>
    <string name="your_devices">Your Devices</string>
    <string name="no_data_available">No Data Available</string>
    <string name="electrosoft">Electrosoft</string>
    <string name="electrosoft_tech_gmail_com">electrosoft.tech@gmail.com</string>
    <string name="_92_340_2211539">+92 340-2211539</string>
    <string name="enter_email">Enter Email</string>
    <string name="submit">Submit</string>
    <string name="enter_6_digit_pin_sent_to_your_email">Enter 6 digit Pin sent to your email</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="sensor">SENSOR</string>
    <string name="device_name">Device Name:</string>
    <string name="device_description">Device Description:</string>
    <string name="device_description_">Device Description</string>
    <string name="change_device_room">Change Device Room</string>
    <string name="device_name_">Device name</string>
    <string name="see_statistics">See Statistics</string>
    <string name="room_name">Room name</string>
    <string name="update_room">Update Room</string>
    <string name="view_devices">View Devices</string>
    <string name="devices_present_in_room">Devices present in room</string>
    <string name="update">Update</string>
    <string name="room_not_assigned">Room not Assigned</string>
    <string name="logout">Logout</string>
    <string name="logout_text">Are you sure you want to log out?</string>
    <string name="google_maps_api_key">AIzaSyCz7M3lGYiADeSEUAr6XzxyRkqEHbrR05o</string>

</resources>
