<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@drawable/gradiant_main"
        android:layout_height="match_parent"
        tools:context=".ui.PinFragment">

        <!-- TODO: Update blank fragment layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

<!--            <TextView-->
<!--                android:id="@+id/acount"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="32dp"-->
<!--                android:ems="10"-->
<!--                android:text="My Account"-->
<!--                android:textAlignment="center"-->
<!--                android:textColor="@color/lightgray"-->
<!--                android:textSize="30dp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                tools:ignore="MissingConstraints" />-->


<!--            <LinearLayout-->
<!--                android:id="@+id/room_name_textview"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="169dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:gravity="center"-->
<!--                android:orientation="vertical"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/acount"-->
<!--                tools:ignore="MissingConstraints">-->

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/ic_e"
                app:layout_constraintBottom_toTopOf="@+id/pin_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView

                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electrosoft"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/electrosoft_tech_gmail_com"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_92_340_2211539"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
<!--                        </LinearLayout>-->

            <TextView
                android:id="@+id/pin_tv"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/enter_6_digit_pin_sent_to_your_email"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/number"
                 />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pin"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pin_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pinEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:hint="@string/enter_pin"
                    android:maxLength="6"
                    />


            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.button.MaterialButton
                android:id="@+id/SubmitPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:text="@string/submit"
                android:padding="@dimen/_12sdp"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pin"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>